--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -28,7 +28,19 @@ body {
   flex-direction: column;
 }
 
-
+kbd {
+    display: inline-block;
+    padding: 1px 2px;
+    font-size: $small-font-size;
+    line-height: $base-line-height;
+    color: #444d56;
+    vertical-align: middle;
+    background-color: #fafbfc;
+    border: 1px solid #c6cbd1;
+    border-bottom-color: #959da5;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 #959da5
+}
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
